--- a/src/app/views/note-view/note-view.component.html
+++ b/src/app/views/note-view/note-view.component.html
@@ -4,7 +4,7 @@
         <h3>({{notesCount()}})</h3>
     </div>
     <div class="searchbar">
-        <mat-form-field class="example-form-field">
+        <mat-form-field>
             <input matInput type="text" placeholder="Search ..." [(ngModel)]="searchValue" (ngModelChange)="searchNotes()">
             <mat-icon>search</mat-icon>
             </mat-form-field>
