--- a/src/app/views/notes-list/components/create-edit-note/create-edit-note.component.html
+++ b/src/app/views/notes-list/components/create-edit-note/create-edit-note.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Add New Note</h1>
+    <h1>{{title}}</h1>
     <form [formGroup]="noteForm" (ngSubmit)="submitNote()" class="form">
         <div class="row">
             <mat-form-field class="title">
