--- a/src/app/views/create-edit-note/create-edit-note.component.scss
+++ b/src/app/views/create-edit-note/create-edit-note.component.scss
@@ -56,7 +56,7 @@
   height: 42px;
   border-radius: 50%;
   border: 3px solid;
-  border-color: #906CE4 transparent;
+  border-color: #505df1 transparent;
 }
 
 @keyframes rotation {
